# assuan-toy

./: .gitignore  Makefile.am  README.md  configure.ac  toy.py
src/: Makefile.am  gpghelper.cc  gpghelper.h  main.cc  sexp.cc  sexp.h  util.cc  util.h
